--- a/exercicios/Aula2_Exercicio_Solucoes.ipynb
+++ b/exercicios/Aula2_Exercicio_Solucoes.ipynb
@@ -355,6 +355,270 @@
     "outarr = np.array([12, 45])\n",
     "assert (filter_array(inarr) == outarr).all()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6 Escreva uma função Python para gerar um dicionário que contenha pares (chave e valor) de números. A chave deve variar de 1 a n, e os valores sejam o valor da chave elevado ao quadrado. \n",
+    "#### Exemplo:  Para n = 5\n",
+    "#### Resultado Esperado: {1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dica: use a função range para criar a sequencia de numeros desejados\n",
+    "def create_dict(n):\n",
+    "    \"\"\"retorne um dicionário com pares (x, x*x)\n",
+    "    \"\"\"\n",
+    "    ### BEGIN SOLUTION\n",
+    "    d = {}\n",
+    "\n",
+    "    for x in range(1,n+1):\n",
+    "        d[x]=x*x\n",
+    "    return d\n",
+    "    ### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Faça seus testes aqui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validação\n",
+    "assert create_dict(5) == {1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7 Escreva uma função Python para remover itens duplicados de um dicionário, ou seja, cujos valores estejam duplicados.\n",
+    "#### Exemplo:  d =  {1: 1, 2: 1, 3: 9, 4: 1, 5: 25}\n",
+    "#### Resultado Esperado: {1: 1, 3: 9, 5: 25}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_duplicates(data):\n",
+    "    \"\"\"retorne um dicionário sem duplicatas\n",
+    "    \"\"\"\n",
+    "    ### BEGIN SOLUTION\n",
+    "    result = {}\n",
+    "\n",
+    "    for key, value in data.items():\n",
+    "        if value not in result.values():\n",
+    "            result[key] = value\n",
+    "    return result\n",
+    "    ### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Faça seus testes aqui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validação\n",
+    "assert remove_duplicates({1: 1, 2: 1, 3: 9, 4: 1, 5: 25}) ==  {1: 1, 3: 9, 5: 25}\n",
+    "data = {'id1': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
+    "        'id2': {'nome': ['Joao'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
+    "        'id3': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
+    "        'id4': {'nome': ['Maria'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}\n",
+    "}\n",
+    "no_duplicates = {'id1': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}, \n",
+    "                 'id2': {'nome': ['Joao'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}, \n",
+    "                 'id4': {'nome': ['Maria'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}}\n",
+    "assert remove_duplicates(data) == no_duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.8 Escreva uma função Python para combinar os itens de mesma chave de uma lista de  dicionários, somando os valores correspondentes.\n",
+    "##### Exemplo:  para [{'item': 'carro', 'quantidade': 400}, {'item': 'moto', 'quantidade': 300}, {'item': 'carro', 'quantidade': 750}]\n",
+    "##### Resultado esperado: {'carro': 1150, 'moto': 300}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_items(item_list):\n",
+    "    \"\"\"retorne um dicionário combinando (somando) as quantidades do mesmo item\n",
+    "    \"\"\"\n",
+    "    ### BEGIN SOLUTION\n",
+    "    result = {}\n",
+    "\n",
+    "    for i in item_list:\n",
+    "        if i['item'] in result:\n",
+    "            result[i['item']] += i['quantidade']\n",
+    "        else:\n",
+    "            result[i['item']] = i['quantidade']\n",
+    "    return result\n",
+    "    ### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Faça seus testes aqui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validação\n",
+    "input_data = [{'item': 'carro', 'quantidade': 400}, \n",
+    "              {'item': 'moto', 'quantidade': 300}, \n",
+    "              {'item': 'carro', 'quantidade': 750}]\n",
+    "output_result = {'carro': 1150, 'moto': 300}\n",
+    "assert combine_items(input_data) == output_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.9 Usando um defaultdict, escreva uma função Python para transformar uma lista de listas num dicionário. Os valores repetidos de uma lista devem ser associados a mesma chave do dicionário, como no exemplo abaixo.\n",
+    "#### Exemplo:  [ [\"carro\", 10], [\"moto\", 20], [\"trem\", 5], [\"carro\", 30], [\"caminhao\", 20] ]\n",
+    "#### Resultado esperado: {\"carro\": [10, 20], \"moto\": [20], \"trem\": [5], \"caminhao\": [20] }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dict_from_list(lista):\n",
+    "    ### BEGIN SOLUTION\n",
+    "    from collections import defaultdict\n",
+    "    d = defaultdict(list)\n",
+    "    for k, v in lista:\n",
+    "        d[k].append(v)\n",
+    "\n",
+    "    return d\n",
+    "    ### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Faça seus testes aqui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validação\n",
+    "lista2 = [ [\"carro\", 10], [\"moto\", 20], [\"trem\", 5], [\"carro\", 30], [\"caminhao\", 20] ]\n",
+    "assert dict_from_list(lista2) == {'carro': [10, 30], 'moto': [20], 'trem': [5], 'caminhao': [20]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.10 Escreva uma função Python para computar o valor total de uma compra de supermercado e dar baixa no estoque (deduzir a quantidade comprada da quantidade em estoque). Retorne o valor total da compra e altere o dicionário de estoque sem retorná-lo.\n",
+    "#### Se a quantidade do item em estoque for menor do que a quantidade da lista de compra, o estoque restante deve ser vendido.\n",
+    "\n",
+    "#### Exemplo:  lista_compras = {\"arroz\":1, \"feijao\":2, \"macarrao\":3}\n",
+    "####                   estoque = {\"arroz\": 60, \"feijao\": 30, \"macarrao\": 0, \"farinha\": 15}\n",
+    "####                   precos = {\"arroz\": 4, \"feijao\": 2, \"macarrao\": 1.5, \"farinha\": 3}\n",
+    "#### Resultado esperado: total = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compra(estoque, precos, lista):\n",
+    "    ### BEGIN SOLUTION\n",
+    "    total = 0\n",
+    "    for x in lista:\n",
+    "        if estoque[x] > lista[x]:\n",
+    "           total = total + precos[x]*lista[x]\n",
+    "           estoque[x] = estoque[x] - lista[x]\n",
+    "        else:\n",
+    "           total = total + precos[x]*estoque[x]\n",
+    "           estoque[x] = 0\n",
+    "    return total\n",
+    "    ### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Faça seus testes aqui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Validação\n",
+    "lista_compras = {\"arroz\":1, \"feijao\":2, \"macarrao\":3}\n",
+    "estoque = {\"arroz\": 60, \"feijao\": 30, \"macarrao\": 1, \"farinha\": 15}\n",
+    "precos = {\"arroz\": 4, \"feijao\": 2, \"macarrao\": 1.5, \"farinha\": 3}\n",
+    "assert compra(estoque, precos, lista_compras) == 9.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
