--- a/exercicios/Aula2_Exercicio.ipynb
+++ b/exercicios/Aula2_Exercicio.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 2 - Exercícios - Sintaxe de Python e NumPy Array\n",
-    "### Consulta a internet (Google, Stackoverflow e etc) liberada!!"
+    "# Aula 2 - Exercícios - Sintaxe de Python e NumPy Array"
    ]
   },
   {
@@ -496,7 +495,7 @@
    "source": [
     "### 2.9 Usando um defaultdict, escreva uma função Python para transformar uma lista de listas num dicionário. Os valores repetidos de uma lista devem ser associados a mesma chave do dicionário, como no exemplo abaixo.\n",
     "#### Exemplo:  [ [\"carro\", 10], [\"moto\", 20], [\"trem\", 5], [\"carro\", 30], [\"caminhao\", 20] ]\n",
-    "#### Resultado esperado: {\"carro\": [10, 20], \"moto\": [20], \"trem\": [5], \"caminhao\": [20] }"
+    "#### Resultado esperado: {\"carro\": [10, 30], \"moto\": [20], \"trem\": [5], \"caminhao\": [20] }"
    ]
   },
   {
