--- a/exercicios/Aula3_Exercicio.ipynb
+++ b/exercicios/Aula3_Exercicio.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 3 - Exercícios - Python e Pandas\n",
-    "### Consulta a internet (Google, Stackoverflow e etc) liberada!!"
+    "# Aula 3 - Exercícios - Python e Pandas"
    ]
   },
   {
