--- a/notebook/Aula2/Aula2_Warmup.ipynb
+++ b/notebook/Aula2/Aula2_Warmup.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.7 Criar um dicionário que represente o conteúdo da tabela abaixo"
+    "#### W2.7 Criar um dicionário que represente o conteúdo da tabela abaixo. Crie manualmente, atribuindo as chaves e valores."
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.11 Criar uma lista de dicionários que represente o conteúdo da tabela abaixo"
+    "#### W2.11 Criar uma lista de dicionários que represente o conteúdo da tabela abaixo. Crie manualmente, atribuindo as chaves e valores."
    ]
   },
   {
@@ -533,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array([[0, 0, 0], [0, -5, -6], [0, -8, -9]])\n",
+    "arr4 = np.array([[0, 0, 0], [0, -5, -6], [0, -8, -9]])\n",
     "# Faça aqui\n"
    ]
   },
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.26 Usando a função np.argmax, retorne o índice das colunas que contém o valor máximo de cada linha array criado abaixo. "
+    "#### W2.26 Usando a função np.argmax, retorne o índice das colunas que contém o valor máximo de cada linha do array criado abaixo. "
    ]
   },
   {
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.28 Faltere a estrutura do array do exercício anterior. Transformando-o num array bidimensional de 12 linhas e 10 colunas.\n",
+    "#### W2.28 Altere a estrutura do array do exercício anterior. Transformando-o num array bidimensional de 12 linhas e 10 colunas.\n",
     "#### Dica: Use o método (função) ndarray.reshape(), passando as dimensões (linhas e colunas) como argumento."
    ]
   },
