--- a/notebook/Aula3/Aula3_Warmup.ipynb
+++ b/notebook/Aula3/Aula3_Warmup.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W3.14 Criando uma Serie com um dicionário"
+    "#### W3.14 Criando uma Serie com um dicionário. Chame a Serie de obj3."
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W3.15 Retorne, na forma de uma serie de booleans, quais elementos da Serie obj3 tem valores NA"
+    "#### W3.15 Retorne, na forma de uma serie de booleanos, quais elementos da Serie obj3 tem valores NA"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W3.16 Retorne, na forma de uma serie de booleans, quais elementos da Serie obj3 não tem valores NA"
+    "#### W3.16 Retorne, na forma de uma serie de booleanos, quais elementos da Serie obj3 não tem valores NA"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W3.23 Atribua o valor 16.5 para todas as posições da coluna debt."
+    "#### W3.23 Atribua o valor 16.5 para todas as posições de uma nova coluna chamada debt."
    ]
   },
   {
@@ -585,9 +585,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>um</th>\n",
+       "      <th>dois</th>\n",
+       "      <th>tres</th>\n",
+       "      <th>quatro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DF</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GO</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SP</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RJ</th>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    um  dois  tres  quatro\n",
+       "DF   0     1     2       3\n",
+       "GO   4     5     6       7\n",
+       "SP   8     9    10      11\n",
+       "RJ  12    13    14      15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Considere o dataframe abaixo\n",
     "data = pd.DataFrame(np.arange(16).reshape((4, 4)),\n",
@@ -602,7 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retorne um dataframe sem as colunas DF e GO\n",
+    "# Retorne um dataframe sem as linhas DF e GO\n",
     "\n"
    ]
   },
