--- a/notebook/Aula4/Aula4_Warmup.ipynb
+++ b/notebook/Aula4/Aula4_Warmup.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx', sheet_name='Tabela', skiprows=3)\n"
+    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx'\n"
    ]
   },
   {
