--- a/exercicios/Aula4_Exercicio.ipynb
+++ b/exercicios/Aula4_Exercicio.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 4 - Exercícios - Pandas, Fontes de dados e Agregação\n",
-    "### Consulta a internet (Google, Stackoverflow e etc) liberada!!"
+    "# Aula 4 - Exercícios - Pandas e Fontes de dados "
    ]
   },
   {
@@ -14,23 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Fazer o download dos datasets\n",
-    "# Se já tiver feito o download, não precisa fazer novamente.\n",
-    "# Se aparecer um erro dizendo que a pasta não está vazia é porque o download já foi feito\n",
-    "!git clone https://github.com/alexlopespereira/curso_ciencia_dados2020.git ../../curso_ciencia_dados2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Importe as bibliotecas pandas, numpy, glob e sqlalchemy\n",
+    "# Importe as bibliotecas pandas, numpy\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import sqlalchemy as sqla"
+    "import numpy as np"
    ]
   },
   {
@@ -79,8 +64,7 @@
    "source": [
     "## Faça seus testes aqui\n",
     "\n",
-    "# path_ideb='https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/ideb/ideb_municipios2017.xlsx'\n",
-    "path_ideb='../../curso_ciencia_dados2020/data/originais/ideb/ideb_municipios2017.xlsx'\n",
+    "path_ideb='https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/ideb/ideb_municipios2017.xlsx'\n",
     "\n",
     "## Para que a validação na célula seguinte funcione, é preciso criar o dataframe chamado `df_ideb`\n",
     "df_ideb = \n"
@@ -121,166 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Escreva uma função para salvar um DataFrame num banco de dados SQLite  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-553qe5248eb14bc30",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Dica 1: A resolução deste exercício é bem semelhante ao código apresentado na Aula\n",
-    "# Dica 2: Antes de salvar no banco de dados, defina o nome do índice como index. Conforme exemplo abaixo:\n",
-    "#         df_idhm.index.names = ['index']\n",
-    "\n",
-    "def save_to_sqlite(df, table_name, con_str):\n",
-    "    \"\"\"salve o dataframe df num banco de dados sqlite especificado por db_path\n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "## Faça seus testes aqui\n",
-    "\n",
-    "# path_idhm = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/idhm/idhm2013.xlsx'\n",
-    "path_idhm='../../curso_ciencia_dados2020/data/originais/idhm/idhm2013.xlsx'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-0e2bh6cefe06bdc60",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "def load_table(table, con_str):\n",
-    "    con = sqla.create_engine(con_str)\n",
-    "    return pd.read_sql_query(\"SELECT * from {0}\".format(table), con, index_col='index')\n",
-    "    \n",
-    "path_idhm='https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/idhm/idhm2013.xlsx'\n",
-    "con_str='sqlite:///idhm2013.sqlite'\n",
-    "table_name='IDHM'\n",
-    "df_idhm = pd.read_excel(path_idhm, sheet_name=\"IDHM\")\n",
-    "\n",
-    "df_idhm.index.names = ['index']\n",
-    "save_to_sqlite(df_idhm, table_name, con_str) # Função que deve ser implementada pelo aluno\n",
-    "idhm_from_db = load_table(table_name, con_str)\n",
-    "\n",
-    "assert idhm_from_db.equals(df_idhm)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.3 Escreva uma função executar uma query SQL de agregação num banco de dados SQLite que retorne a média dos valores de uma coluna `VALORES` agregados por uma coluna `CATEGORIAS`.\n",
-    "#### Dê o apelido `Media` para a métrica `AVG` na sua query. Ou seja: `AVG(CATEGORIA) AS Media`\n",
-    "#### Retorne a coluna `CATEGORIA` na tabela de resultados para identificar os valores. Ordene os resultados pelo valor da média em ordem decrescente.\n",
-    "#### Exemplo: Calcule média do IDHM (`VALORES='IDHM'`) agregado por Ano da pesquisa (`CATEGORIAS='ANO'`)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-553e5248ebs14bc30",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Dica: A resposta deste exercício é bem semelhante ao código mostrado na aula, porém você\n",
-    "#       precisa parametrizar a string da query com os argumentos passados na função.\n",
-    "def soma_com_agregacao(val, cat, table, con_str):\n",
-    "    \"\"\"retorne um dataframe contendo a soma dos valores em val dentro das categorias cat da tabela table\n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Faça seus testes aqui\n",
-    "\n",
-    "# path_idhm = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/idhm/idhm2013.xlsx'\n",
-    "path_idhm='../../curso_ciencia_dados2020/data/originais/idhm/idhm2013.xlsx'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-0e2bt6cefe06bdc60",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "path_idhm='https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/idhm/idhm2013.xlsx'\n",
-    "con_str='sqlite:///idhm2013.sqlite'\n",
-    "con = sqla.create_engine(con_str)\n",
-    "table_name='IDHM'\n",
-    "df_idhm = pd.read_excel(path_idhm, sheet_name=\"IDHM\")\n",
-    "df_idhm.index.names = ['index']\n",
-    "df_idhm.to_sql(table_name, con, if_exists=\"replace\")\n",
-    "test_data = {'ANO': {0: 2010, 1: 2000, 2: 1991}, 'Media': {0: 0.7, 1: 0.5, 2: 0.4}}\n",
-    "df_agg = soma_com_agregacao('IDHM', 'ANO', table_name, con_str)\n",
-    "df_agg['Media'] = df_agg['Media'].apply(lambda x: round(x, 1))\n",
-    "assert df_agg.to_dict() == test_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4 Escreva uma função para fazer o merge dos dataframes de população e de PIB de 2017. A função deve receber como parâmetro o caminho para cada um dos dataframes."
+    "### 4.2 Escreva uma função para fazer o merge dos dataframes de população e de PIB de 2017. A função deve receber como parâmetro o caminho para cada um dos dataframes."
    ]
   },
   {
@@ -329,10 +154,8 @@
    "outputs": [],
    "source": [
     "## Faça seus testes aqui\n",
-    "# path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
-    "# path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n",
-    "path_pib = '../../curso_ciencia_dados2020/data/originais/pib/pib_municipios.xlsx'\n",
-    "path_pop='../../curso_ciencia_dados2020/data/originais/populacao/estimativa_dou_2017.xlsx'\n"
+    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
+    "path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n"
    ]
   },
   {
@@ -352,8 +175,8 @@
    "outputs": [],
    "source": [
     "# Validação\n",
-    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
-    "path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n",
+    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
+    "path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n",
     "\n",
     "test_merge = {'pop2017': 25437, '2017': 498864}\n",
     "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
@@ -364,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.5 Escreva uma função para calcular o PIB percapita de cada município do Brasil, considerando o dataframe do exercício anterior.\n",
+    "### 4.3 Escreva uma função para calcular o PIB percapita de cada município do Brasil, considerando o dataframe do exercício anterior.\n",
     "#### Nomeie a coluna do PIB Percapita com `pib_percapita`"
    ]
   },
@@ -419,6 +242,8 @@
    "outputs": [],
    "source": [
     "# Validação\n",
+    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
+    "\n",
     "pib_percapita_2017 = pib_percapita(df_pib_pop)\n",
     "assert round(pib_percapita(df_pib_pop).loc[0,'pib_percapita'],1) == 19.6"
    ]
@@ -427,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.6 Escreva uma função para retornar os registros dos 10 maiores PIBs percapita do brasil (de 2017) a partir do dataframe do exercício anterior. \n",
+    "### 4.4 Escreva uma função para retornar os registros dos 10 maiores PIBs percapita do brasil (de 2017) a partir do dataframe do exercício anterior. \n",
     "#### Escreva uma função genérica que receba como parâmetro um dataframe e o nome da coluna de ordenação.\n"
    ]
   },
@@ -463,7 +288,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
+    "pib_percapita_2017 = pib_percapita(df_pib_pop)\n",
+    "\n"
    ]
   },
   {
@@ -504,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.7 Escreva uma função para contar quantos nomes de municípios são diferentes nas bases de dados do PIB e da população. \n",
+    "### 4.5 Escreva uma função para contar quantos nomes de municípios são diferentes nas bases de dados do PIB e da população. \n",
     "#### A coluna do nome dos municípios no dataset de PIB contém também o nome da UF. Remova o nome da UF, por exemplo, removendo os 5 últimos caracteres da string do nome do município, antes de efetuar a comparação.\n",
     "#### Interprete este resultado. O que você pode extrair de aprendizado deste resultado? "
    ]
@@ -562,96 +390,11 @@
    "outputs": [],
    "source": [
     "# Validação\n",
+    "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
+    "path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n",
+    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
+    "\n",
     "assert compare_df_cols(df_pib_pop, 'municipio_x', 'municipio_y') == 16"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.8 Considere algumas linhas de uma base de dados de morbidade apresentadas a seguir. Perceba que há dados de vários meses de 2020 para cada Estado da Federação.\n",
-    "#### Escreva uma função para pivotar esta base de dados apresentando os meses do ano nas colunas, os municípios nas linhas e a quantidade de óbitos como valores das células. \n",
-    "\n",
-    "|       | Município               |   cod_ibge6 | mes   |   ano | mes_ano    | Óbitos   |\n",
-    "|------:|:------------------------|------------:|:------|------:|:-----------|:---------|\n",
-    "|     0 | Alta Floresta D'Oeste   |      110001 | Abr   |  2020 | 2020-04-01 | 8        |\n",
-    "|     1 | Alto Alegre dos Parecis |      110037 | Abr   |  2020 | 2020-04-01 | 1        |\n",
-    "|     2 | Alto Paraíso            |      110040 | Abr   |  2020 | 2020-04-01 | 2        |\n",
-    "| 33347 | Vila Boa                |      522220 | Jan   |  2020 | 2020-01-01 | -        |\n",
-    "| 33348 | Vila Propício           |      522230 | Jan   |  2020 | 2020-01-01 | -        |\n",
-    "| 33349 | Brasília                |      530010 | Jan   |  2020 | 2020-01-01 | 578      |\n",
-    "\n",
-    "#### O resultado esperado é semelhante a este:\n",
-    "\n",
-    "|   cod_ibge6 | 2020-01-01   |   2020-02-01 |   2020-03-01 | 2020-04-01   | 2020-05-01   | 2020-06-01   |\n",
-    "|------------:|-------------:|-------------:|-------------:|-------------:|-------------:|-------------:|\n",
-    "|      110001 |  5 |            2 |            3 |  8 | 2            | 2            |\n",
-    "|      110002 | 12 |           13 |           16 | 10 | 8            | 7            |\n",
-    "|      110003 |  - |            1 |            1 |  - | -            | 2            |\n",
-    "|      110004 | 23 |            8 |           29 | 11 | 17           | 13           |\n",
-    "|      110005 |  1 |            2 |            2 |  3 | 1            | -            |"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-553e52r48eb14bc30",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Dica 1: Sempre dê preferência para fazer agregação usando códigos como identificador, \n",
-    "#         use nomes em ultimo caso quando não houver códigos identificadores. \n",
-    "# Dica 2: Se você usar o atributo `mes_ano` para pivotar, o pandas já ordena de forma cronológica as colunas.\n",
-    "\n",
-    "def pivot_morbidade(file_path):\n",
-    "    \"\"\"retorne um dataframe pivotado\n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "    \n",
-    "    ### END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Faça seus testes aqui\n",
-    "\n",
-    "# path_morbidade = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/morbidade/consolidado/morbidade_simplificado.csv'\n",
-    "path_morbidade = '../../curso_ciencia_dados2020/data/originais/morbidade/consolidado/morbidade_simplificado.csv'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-0e2b6tcefe06bdc60",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "path_morbidade = 'https://github.com/alexlopespereira/curso_ciencia_dados2020/raw/master/data/originais/morbidade/consolidado/morbidade_simplificado.csv'\n",
-    "test_data = {'2020-01-01': '5', '2020-02-01': '2', '2020-03-01': '3', '2020-04-01': '8', '2020-05-01': '2', \n",
-    "             '2020-06-01': '2'}\n",
-    "assert pivot_morbidade(path_morbidade).loc[110001].to_dict() == test_data"
    ]
   }
  ],
@@ -672,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "name": "_merged"
  },
