--- a/notebook/Aula4/Aula4_Warmup.ipynb
+++ b/notebook/Aula4/Aula4_Warmup.ipynb
@@ -21,6 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Considere o dataframe abaixo\n",
     "frame = pd.DataFrame(np.random.randn(4, 3), columns=list('bde'),\n",
     "                        index=['DF', 'GO', 'SP', 'RJ'])\n",
@@ -34,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Crie uma função lambda para calcular a diferença \n",
-    "# entre a média e a mediana de uma Serie, e aplique-a ao dataframe frame, fazendo o cálculo no eixo das linhas\n",
+    "# entre a média e a mediana de uma Serie, e aplique-a ao dataframe frame, fazendo o cálculo ao longo do eixo das linhas\n",
     "\n"
    ]
   },
@@ -44,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# aplique afunção lambda ao dataframe frame, fazendo o cálculo no eixo das colunas\n",
+    "# aplique a mesma função lambda ao dataframe frame, fazendo o cálculo ao longo eixo das colunas\n",
     "\n"
    ]
   },
@@ -93,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calcule a soma ao longo do eixo das linhas\n"
+    "# Calcule a soma ao longo do eixo das linhas, considerando que \n",
+    "# a soma de um número com um NA retorna um NA.\n"
    ]
   },
   {
@@ -102,7 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calcule a soma ao longo do eixo das colunas\n"
+    "# Calcule a soma ao longo do eixo das colunas, considerando que \n",
+    "# a soma de um número com um NA retorna um NA.\n"
    ]
   },
   {
@@ -138,16 +150,6 @@
    "metadata": {},
    "source": [
     "### Manipulação de Fontes de Dados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
    ]
   },
   {
@@ -211,7 +213,7 @@
    "metadata": {},
    "source": [
     "#### W4.2 Carregue o arquivo do índice de gini. Você pode escolher abrir do arquivo local ou diretamente da URL do github.\n",
-    "#### Use os argumentos sep, skiprows, skipfooter, na_values e decimal."
+    "#### Assegure-se de carregar os cabeçalhos corretamente e os valores numericos como float. Para isso, use os argumentos sep, skiprows, skipfooter, na_values, decimal e encoding='utf8'."
    ]
   },
   {
