--- a/exercicios/Aula4_Exercicio_Solucoes.ipynb
+++ b/exercicios/Aula4_Exercicio_Solucoes.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 4 - Exercícios - Pandas e Fontes de dados "
+    "# Aula 4 - Exercícios - Pandas e Fontes de dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,12 @@
    "metadata": {},
    "source": [
     "### 4.1 Carregue o arquivo do IDEB 2017 no formato de um DataFrame.  Crie uma função para calcular a média do IDEB de 2017 de todos os municípios de um determinado Estado. \n",
-    "#### Remova os registros cujo valor na coluna REDE sejam Municipal, Estadual ou Federal. Deixe somente os registros cujos valores na coluna REDE sejam Pública.\n",
-    "#### Na célula de testes, crie um dataframe com o nome `df_ideb`.  Use os argumentos `skiprows`, `na_values` e  `skipfooter` para carregar a tabela corretamente."
+    "#### Remova os registros cujo valor na coluna REDE sejam Municipal, Estadual ou Federal. Deixe somente os registros cujos valores na coluna REDE sejam Pública.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -46,33 +45,33 @@
     "#         o carregamento dos dados ou os substitua por np.nan (NA) com o metodo replace.\n",
     "# Dica 2: Use a função loc para fazer o filtro de registros.\n",
     "# Dica 3: Dentre várias maneiras possíveis, uma maneira bastante concisa é usar o operador & (and) para\n",
-    "#         congregar dois critérios de filtro (seleção) de registros.\n",
-    "\n",
+    "# congregar dois critérios de filtro (seleção) de registros.\n",
     "def media_ideb(df, sigla_estado):\n",
     "    \"\"\"retorne o valor da media do IDEB de 2017 contido na coluna col do Estado especificado por sigla_estado.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
+    "    df.replace({'-': np.nan}, inplace=True)\n",
+    "    bool_estado = df['SG_UF']==sigla_estado\n",
+    "    bool_publica = df['REDE']=='Pública'\n",
+    "    return df.loc[bool_estado & bool_publica, 'IDEB12_17'].mean()\n",
+    "    ### END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Faça seus testes aqui\n",
-    "\n",
     "path_ideb='https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/ideb/ideb_municipios2017.xlsx'\n",
     "\n",
-    "## Para que a validação na célula seguinte funcione, é preciso criar o dataframe chamado `df_ideb`\n",
-    "df_ideb = \n"
+    "df_ideb = pd.read_excel(path_ideb, skiprows=9, skipfooter=3, na_values='-')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -88,14 +87,11 @@
    "outputs": [],
    "source": [
     "# Validação\n",
-    "\n",
-    "###################################################\n",
-    "###       ATENÇÃO PARA ESTA INSTRUÇÃO           ###\n",
-    "# Crie na célula anterior o dataframe df_ideb.    #\n",
-    "# Use os argumentos skiprows, na_values e         #\n",
-    "# skipfooter para carregar a tabela corretamente. #\n",
-    "###################################################\n",
-    "\n",
+    "##############################################\n",
+    "########## ATENÇÃO PARA ESTA INSTRUÇÃO #######\n",
+    "# Crie na célula anterior um dataframe df_ideb. \n",
+    "# Use os argumentos skiprows, na_values e skipfooter para carregar a tabela corretamente.\n",
+    "##############################################\n",
     "assert round(media_ideb(df_ideb, 'DF'),1) == 3.4\n",
     "assert round(media_ideb(df_ideb, 'SP'),1) == 4.0\n",
     "assert round(media_ideb(df_ideb, 'GO'),1) == 4.2"
@@ -110,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -135,7 +131,7 @@
     "#         municipio (sem acento) e a coluna com o codigo ibge de 7 caracteres cod_ibge7. Veja o exemplo:\n",
     "#         {'Unnamed: 0': 'nivel', 'Unnamed: 1': 'cod_ibge7', 'Unnamed: 2': 'municipio'}. O pandas transformará essas\n",
     "#         colunas em municipio_x e municipio_y. Mantenha esses dois nomes de coluna, pois eles serão usados no exercício\n",
-    "#         4.4.\n",
+    "#         3.7.\n",
     "# Dica 6: Depois que os dois dataframes tiverem o codigo ibge (com valores equivalentes\n",
     "#         e mesmo tipo de dados) você pode fazer o merge.\n",
     "\n",
@@ -143,13 +139,20 @@
     "    \"\"\"retorne um dataframe resultante do merge dos dados do pib e da população\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
+    "    df_pop = pd.read_excel(path_pop, sheet_name=\"Municipios\", dtype={'cod_munic': str, 'cod_uf': str})\n",
+    "    # Concatena o codigo da UF com o codigo do municipio\n",
+    "    df_pop['cod_ibge7'] = df_pop['cod_uf'] + df_pop['cod_munic']\n",
+    "    df_pib = pd.read_excel(path_pib, skiprows=3, skipfooter=1, dtype={'Unnamed: 1': str})\n",
+    "    df_pib.rename(columns={'Unnamed: 0': 'nivel', 'Unnamed: 1': 'cod_ibge7', \n",
+    "                           'Unnamed: 2': 'municipio'}, inplace=True)\n",
     "\n",
-    "    ### END SOLUTION"
+    "    return pd.merge(df_pop, df_pib, on='cod_ibge7')\n",
+    "    ### END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -188,12 +191,12 @@
    "metadata": {},
    "source": [
     "### 4.3 Escreva uma função para calcular o PIB percapita de cada município do Brasil, considerando o dataframe do exercício anterior.\n",
-    "#### Nomeie a coluna do PIB Percapita com `pib_percapita`"
+    "#### Nomeie a coluna do PIB Percapita com 'pib_percapita'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -207,25 +210,28 @@
    "outputs": [],
    "source": [
     "def pib_percapita(pib_pop):\n",
-    "    \"\"\"retorne retorne um dataframe adicionando uma nova coluna para o PIB percapita.\n",
+    "    \"\"\"retorne retorne um dataframe contendo o codigo ibge de 7 caracteres,\n",
+    "       o nome do municipio e seu PIB percapita.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
+    "    pib_pop['pib_percapita'] = pib_pop['2017']/pib_pop['pop2017']\n",
+    "    return pib_pop\n",
+    "    ### END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -241,6 +247,7 @@
    "outputs": [],
    "source": [
     "# Validação\n",
+    "# Considere a função merge_pop_pib do exercicio 4.2\n",
     "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
     "\n",
     "pib_percapita_2017 = pib_percapita(df_pib_pop)\n",
@@ -257,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -272,30 +279,28 @@
    "source": [
     "# Dica 1: Use o método sort_values para ordenar o dataframe. Para uma ordenação descendente use ascending=False.\n",
     "# Dica 2: Use o atributo iloc para retornar todas as colunas dos 10 primeiros registros.\n",
-    "\n",
     "def top10(df, col):\n",
     "    \"\"\"retorne os top 10 registros do dataframe df ordenados por col\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
+    "    return df.sort_values(by=col, ascending=False).iloc[:10,:]\n",
+    "    ### END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Faça seus testes aqui\n",
     "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
-    "pib_percapita_2017 = pib_percapita(df_pib_pop)\n",
-    "\n"
+    "pib_percapita_2017 = pib_percapita(df_pib_pop)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -310,6 +315,9 @@
    "outputs": [],
    "source": [
     "# Validação\n",
+    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
+    "pib_percapita_2017 = pib_percapita(df_pib_pop)\n",
+    "\n",
     "test_data = {'cod_ibge7': {3677: '3536505', 3547: '3524709'},\n",
     "             'municipio_x': {3677: 'Paulínia', 3547: 'Jaguariúna'},\n",
     "             'uf': {3677: 'SP', 3547: 'SP'},\n",
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -359,22 +367,23 @@
     "    \"\"\"retorne a quantidade de registros em que o valor do registro na coluna col1 difere do valor em col2\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
+    "    return (df[col2].map(lambda x: str(x)[:-5]) != df[col1]).sum()\n",
+    "    ### END SOLUTION\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -391,8 +400,8 @@
     "# Validação\n",
     "path_pib = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/pib/pib_municipios.xlsx'\n",
     "path_pop = 'https://github.com/alexlopespereira/curso_ciencia_dados2021/raw/master/data/originais/populacao/estimativa_dou_2017.xlsx'\n",
-    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
     "\n",
+    "df_pib_pop = merge_pop_pib(path_pop, path_pib)\n",
     "assert compare_df_cols(df_pib_pop, 'municipio_x', 'municipio_y') == 16"
    ]
   }
