--- a/exercicios/Aula4_Exercicio_Extra.ipynb
+++ b/exercicios/Aula4_Exercicio_Extra.ipynb
@@ -163,7 +163,7 @@
     "# !pip install ipynb\n",
     "%cd /content/drive/MyDrive/Colab\\ Notebooks\n",
     "%pwd\n",
-    "from ipynb.fs.defs.Aula4_Exercicio_Solucoes import merge_pop_pib, pib_percapita"
+    "from ipynb.fs.defs.Aula4_Exercicio import merge_pop_pib, pib_percapita"
    ]
   },
   {
