--- a/notebook/Aula5/Aula5_Warmup.ipynb
+++ b/notebook/Aula5/Aula5_Warmup.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aula 5 - Warmup de Elaboração de Gráficos"
+    "## Aula 5 - Warmup de Estatística Descritiva e Gráficos"
    ]
   },
   {
