--- a/exercicios/Aula5_Exercicio.ipynb
+++ b/exercicios/Aula5_Exercicio.ipynb
@@ -198,12 +198,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![g1.png](attachment:g1.png)"
+    "![g1.png](attachment:g1.png)\n",
+    "https://github.com/alexlopespereira/curso_ciencia_dados2021/blob/master/exercicios/g1.png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![g2.png](attachment:g2.png)"
+    "![g2.png](attachment:g2.png)\n",
+    "https://github.com/alexlopespereira/curso_ciencia_dados2021/blob/master/exercicios/g2.png"
    ]
   },
   {
